test/tests/stages/9_functions/valid/libraries/no_function_calls/local_stack_variables_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[63]:
  int
  identifier(f)
  (
  int
  identifier(reg1)
  ,
  int
  identifier(reg2)
  ,
  int
  identifier(reg3)
  ,
  int
  identifier(reg4)
  ,
  int
  identifier(reg5)
  ,
  int
  identifier(reg6)
  ,
  int
  identifier(stack1)
  ,
  int
  identifier(stack2)
  ,
  int
  identifier(stack3)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(f)
  (
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  ,
  -
  const int(1)
  ,
  -
  const int(2)
  ,
  -
  const int(3)
  )
  ;
  }
