test/tests/stages/9_functions/invalid_declarations/params_with_same_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  )
  ;
  }
